# PythonDojo

./: .gitignore  README.md  pyproject.toml
data_analysis/jupyter notebooks/: 1_basic_charts.ipynb  create_reading_writing.ipynb  data_analyze.ipynb  data_proprecessing.ipynb
data_analysis/pandas_practice/data/: 学生表现因素_processed.csv
data_analysis/pandas_practice/jupyter notebooks/: create_reading_writing.ipynb  data_proprecessing.ipynb  index_select_assign.ipynb
data_analysis/pyecharts_hub/: 3d.html  bar_chart.html  first_practice.ipynb  line_chart.html  map.html  pie.html  render.html  scatter.html
data_analysis/pyecharts_hub/jupyter notebooks/: 1_bar.ipynb  1_basic_charts.ipynb  data_analyze.ipynb  histogram.html  line3d_autorotate.html  render.html  学生表现分析面板.html  考试成绩分布.html
langchain_hub/: chatbot.ipynb  test.py
langchain_hub/.ipynb_checkpoints/: chatbot-checkpoint.ipynb
langchain_hub/jupyter notebooks/: chatbot.ipynb  simple_llm_application.ipynb
langchain_hub/src/1_chat_models/: alternative_models.py  save_message_history_firebase.py
langchain_hub/src/2_prompt_templates/: stater.py
langchain_hub/src/3_chains/: basics.py  chains_conditional.py  chains_inner_workings.py  chains_parallel.py  chains_sequential.py
langchain_hub/src/4_rags/: basics.py
langchain_hub/src/5_agents/: basics.py
langchain_hub/src/chat_models/: conversation.py  conversation_with_user.py  save_message_history_firebase.py  stater.py
langchain_hub/src/prompt_templates/: stater.py
langchainlearning/: chatbot.py
python_basic/: helloworld.py
(+2 files in other folders)
