[project]
name = "pythondojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.13",
    "langchain-deepseek>=0.1.3",
    "langchain-google-firestore>=0.5.0",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyecharts>=2.0.8",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
